--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@
                                         Since the Industrial Revolution, ocean water acidity has risen by 26% due to anthropogenic emissions—a process known as <span class="italic">ocean acidification</span>—posing a risk for marine life and the communities depending on it. This paper examines the consequences of ocean acidification for child health, using data from coastal regions in 36 low- and middle-income countries from 1972 to 2018, encompassing 41% of the world’s coastal population.  Leveraging short-term exogenous shifts in ocean acidity near human settlements for identification,  we find that prenatal exposure to higher water acidity significantly raises the risk of death in the first months of life and impacts early childhood development.  We show evidence consistent with these effects being associated with maternal malnutrition,  as increased acidity reduces catches for small-scale fisheries,  increasing seafood prices and reducing consumption of crucial nutrients.  Our findings indicate limited adaptation to these impacts. We estimate that, absent intervention, ocean acidification could contribute to as many as 77 million neonatal deaths in this region by 2100—a consequence that should not be ignored in the projected cost of climate change.                                    </p>
                                 </div>
                             </article>
+                            <article id="AKT">
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white"></h3>
+                                <p class="mt-2 text-gray-700 dark:text-gray-300">
+                                    with <a href="https://sites.google.com/view/mirkoabbritti/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Mirko Abbritti</a> and <a href="https://ttrani.wixsite.com/tommasotrani" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Tommaso Trani</a>
+                                </p>
+                                <div class="mt-3 flex items-center gap-4">
+                                    <a href="https://www.dropbox.com/scl/fi/ecgsiz2pi7wp21os536c4/AKT.pdf?rlkey=y3akep6gdex5t0adtxfnf9hck&dl=0" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <button onclick="toggleVisibility('FSTS-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
+                                        Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
+                                    </button>
+                                </div>
+                                <div id="AKT-abstract" class="hidden mt-2">
+                                    <p class="text-gray-700 dark:text-gray-300 paper-abstract">
+                                        Data from emerging market economies reflect that, following large devaluations, export revenue growth is low and delayed. We examine this fact by introducing long-term trade relationships and bargaining into a standard small open economy model. The long-term nature of trade relationships reduces the expenditure-switching effect of exchange rate fluctuations and the allocative role of intermediate export prices. These elements improve the ability of the model to explain export growth following large devaluations and other second moments. Our analysis suggests that higher exporters' bargaining power or lower trade adjustment costs would increase resilience to interest rate shocks.
+                                    </div>
+                            </article>
                         </div>
                     </section>
 
@@ -241,6 +257,7 @@
     </script>
 </body>
 </html>
+
 
 
 
