--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
                                     <a href="https://www.dropbox.com/scl/fi/ecgsiz2pi7wp21os536c4/AKT.pdf?rlkey=y3akep6gdex5t0adtxfnf9hck&dl=0" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
-                                    <button onclick="toggleVisibility('FSTS-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
+                                    <button onclick="toggleVisibility('AKT-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
                                 </div>
@@ -257,6 +257,7 @@
     </script>
 </body>
 </html>
+
 
 
 
