--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 </div>
                             </article>
                             <article id="AKT">
-                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white"></h3>
+                                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Trade Relationships, Bargaining and Export Dynamics</h3>
                                 <p class="mt-2 text-gray-700 dark:text-gray-300">
                                     with <a href="https://sites.google.com/view/mirkoabbritti/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Mirko Abbritti</a> and <a href="https://ttrani.wixsite.com/tommasotrani" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Tommaso Trani</a>
                                 </p>
@@ -257,6 +257,7 @@
     </script>
 </body>
 </html>
+
 
 
 
