--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                     </svg>
                                     Email
                                 </a>
-                                <a href="https://linkedin.com/in/your-profile" target="_blank" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
+                                <a href="https://linkedin.com/in/ivankimtaveras" target="_blank" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
                                     <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                                         <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-9 15H7v-7h3v7zm-1.5-8.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM18 18h-3v-3.5c0-.83-.02-1.9-1.17-1.9s-1.34.92-1.34 1.84V18h-3v-7h2.89v1.26h.04c.38-.71 1.3-1.26 2.6-1.26 2.77 0 3.28 1.82 3.28 4.2V18z"/>
                                     </svg>
@@ -274,6 +274,7 @@
     </script>
 </body>
 </html>
+
 
 
 
