--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Social Media Preview Tags (Open Graph) -->
     <meta property="og:title" content="Iván Jomin Kim Taveras">
     <meta property="og:description" content="Personal academic website">
-    <meta property="og:image" content="https://ivankimtaveras.github.io/initials_icon.png">
+    <meta property="og:image" content="https://ivankimtaveras.github.io/docs/Icon/initials_icon.png">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
     <meta property="og:url" content="https://ivankimtaveras.github.io/">
@@ -97,7 +97,7 @@
                             <p class="mt-1 text-gray-600 dark:text-gray-400">PhD Candidate in Economics</p>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">Bocconi University</p>
                             <div class="mt-6 flex flex-col space-y-3">
-                                <a href="https://www.dropbox.com/scl/fi/8rxq2bdqekw46qp08il9e/KimTaveras_CV.pdf?rlkey=l1opx6qb2oarrof09qx0qm5cs&dl=0" target="_blank" class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 shadow-sm">
+                                <a href="https://ivankimtaveras.github.io/docs/CV/KimTaveras_CV.pdf" target="_blank" class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 shadow-sm">
                                     <svg class="h-5 w-5 mr-2 -ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.364 6.364l-3.182 3.182a.75.75 0 01-1.06-1.061l3.182-3.182a3 3 0 000-4.243z" clip-rule="evenodd" /></svg>
                                     View CV
                                 </a>
@@ -164,7 +164,7 @@
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://www.dropbox.com/scl/fi/x3fzhm3v70qtqtj0hl9fh/FSTS.pdf?rlkey=pflwk14zhr9mkakxl86cu75vx&dl=0" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/FSTS.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
                                     <button onclick="toggleVisibility('FSTS-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -180,7 +180,7 @@
                                     with <a href="https://sites.google.com/view/mirkoabbritti/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Mirko Abbritti</a> and <a href="https://ttrani.wixsite.com/tommasotrani" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Tommaso Trani</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://www.dropbox.com/scl/fi/ecgsiz2pi7wp21os536c4/AKT.pdf?rlkey=y3akep6gdex5t0adtxfnf9hck&dl=0" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/AKT.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
                                     <button onclick="toggleVisibility('AKT-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -274,6 +274,7 @@
     </script>
 </body>
 </html>
+
 
 
 
