--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <!-- Left Column: Photo and Info -->
                 <aside class="md:col-span-1">
                     <div class="sticky top-32">
-                            <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="https://raw.githubusercontent.com/ivankimtaveras/ivankimtaveras.github.io/docs/Website_Photo_KimTaveras.JPG" alt="A professional photograph of Iván Jomin Kim Taveras" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">                        <div class="mt-6">
+                            <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="docs/Photo/Website_Photo_KimTaveras.JPG" alt="A professional photograph of Iván Jomin Kim Taveras" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">                        <div class="mt-6">
                             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Iván Jomin Kim Taveras</h2>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">PhD Candidate in Economics</p>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">Bocconi University</p>
@@ -274,6 +274,7 @@
     </script>
 </body>
 </html>
+
 
 
 
