--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <!-- Left Column: Photo and Info -->
                 <aside class="md:col-span-1">
                     <div class="sticky top-32">
-                            <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="docs/Photo/Website_Photo_KimTaveras.JPG" alt="A professional photograph of Iván Jomin Kim Taveras" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">                        <div class="mt-6">
+                            <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="docs/Photo/Website_Photo_KimTaveras.JPG?v={{ site.github.build_revision }}" alt="A professional photograph of Iván Jomin Kim Taveras" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">                        <div class="mt-6">
                             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Iván Jomin Kim Taveras</h2>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">PhD Candidate in Economics</p>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">Bocconi University</p>
@@ -164,7 +164,7 @@
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/FSTS.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/FSTS.pdf?v={{ site.github.build_revision }}" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
                                     <button onclick="toggleVisibility('FSTS-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -180,7 +180,7 @@
                                     with <a href="https://sites.google.com/view/mirkoabbritti/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Mirko Abbritti</a> and <a href="https://ttrani.wixsite.com/tommasotrani" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Tommaso Trani</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/AKT.pdf" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/AKT.pdf?v={{ site.github.build_revision }}" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
                                     <button onclick="toggleVisibility('AKT-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -274,6 +274,7 @@
     </script>
 </body>
 </html>
+
 
 
 
