--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
@@ -32,8 +34,8 @@
     </script>
 
     <!-- Icon -->
-    <link rel="icon" type="image/png" href="initials_icon.png">    
-    
+    <link rel="icon" type="image/png" href="{{ '/docs/icon/initials_icon.png' | relative_url }}">
+
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,16 +94,24 @@
                 <!-- Left Column: Photo and Info -->
                 <aside class="md:col-span-1">
                     <div class="sticky top-32">
-                            <img class="rounded-lg shadow-lg w-full h-auto object-cover" src="docs/Photo/Website_Photo_KimTaveras.JPG?v={{ site.github.build_revision }}" alt="A professional photograph of Iván Jomin Kim Taveras" onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';">                        <div class="mt-6">
+                            <img
+                              class="rounded-lg shadow-lg w-full h-auto object-cover"
+                              src="{{ '/docs/photo/Website_Photo_KimTaveras.JPG' | relative_url }}?v={{ site.github.build_revision }}"
+                              alt="Iván Jomin Kim Taveras"
+                              loading="lazy" decoding="async"
+                              onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';"
+                            />
+                        <div class="mt-6">
                             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Iván Jomin Kim Taveras</h2>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">PhD Candidate in Economics</p>
                             <p class="mt-1 text-gray-600 dark:text-gray-400">Bocconi University</p>
                             <div class="mt-6 flex flex-col space-y-3">
-                                <a href="https://ivankimtaveras.github.io/docs/CV/KimTaveras_CV.pdf?v={{ site.github.build_revision }}" target="_blank" class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 shadow-sm">
-                                    <svg class="h-5 w-5 mr-2 -ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.364 6.364l-3.182 3.182a.75.75 0 01-1.06-1.061l3.182-3.182a3 3 0 000-4.243z" clip-rule="evenodd" /></svg>
-                                    View CV
+                                <a
+                                  href="{{ '/docs/CV/KimTaveras_CV.pdf' | relative_url }}?v={{ site.github.build_revision }}"
+                                  target="_blank" rel="noopener noreferrer"
+                                  class="inline-flex items-center justify-center px-4 py-2 …">
+                                  View CV
                                 </a>
-                            
                                 <a id="email-link" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
                                     <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                                         <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
@@ -146,7 +156,12 @@
                             <article id="RainySeasons">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="#" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a
+                                      href="#"
+                                      target="_blank" rel="noopener noreferrer"
+                                      class="text-blue-600 dark:text-blue-400 hover:underline font-medium">
+                                      View Paper (PDF)
+                                    </a>
                                     <button onclick="toggleVisibility('RainySeasons-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -164,7 +179,12 @@
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/FSTS.pdf?v={{ site.github.build_revision }}" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a
+                                      href="{{ '/docs/papers/FSTS.pdf' | relative_url }}?v={{ site.github.build_revision }}"
+                                      target="_blank" rel="noopener noreferrer"
+                                      class="text-blue-600 dark:text-blue-400 hover:underline font-medium">
+                                      View Paper (PDF)
+                                    </a>
                                     <button onclick="toggleVisibility('FSTS-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -180,7 +200,12 @@
                                     with <a href="https://sites.google.com/view/mirkoabbritti/" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Mirko Abbritti</a> and <a href="https://ttrani.wixsite.com/tommasotrani" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Tommaso Trani</a>
                                 </p>
                                 <div class="mt-3 flex items-center gap-4">
-                                    <a href="https://ivankimtaveras.github.io/docs/Papers on website/AKT.pdf?v={{ site.github.build_revision }}" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline font-medium">View Paper (PDF)</a>
+                                    <a
+                                      href="{{ '/docs/papers/AKT.pdf' | relative_url }}?v={{ site.github.build_revision }}"
+                                      target="_blank" rel="noopener noreferrer"
+                                      class="text-blue-600 dark:text-blue-400 hover:underline font-medium">
+                                      View Paper (PDF)
+                                    </a>
                                     <button onclick="toggleVisibility('AKT-abstract', this)" class="text-blue-600 dark:text-blue-400 hover:underline flex items-center font-medium">
                                         Abstract <svg class="h-4 w-4 ml-1 toggle-arrow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg>
                                     </button>
@@ -274,6 +299,7 @@
     </script>
 </body>
 </html>
+
 
 
 
