--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- Social Media Preview Tags (Open Graph) -->
     <meta property="og:title" content="Iván Jomin Kim Taveras">
     <meta property="og:description" content="Personal academic website">
-    <meta property="og:image" content="https://ivankimtaveras.github.io/docs/Icon/initials_icon.png">
+    <meta property="og:image" content="{{ '/docs/icon/initials_icon.png' | absolute_url }}">
     <meta property="og:image:width" content="512">
     <meta property="og:image:height" content="512">
-    <meta property="og:url" content="https://ivankimtaveras.github.io/">
+    <meta property="og:url" content="{{ '/' | absolute_url }}">
     <meta name="twitter:card" content="summary_large_image">
     
     <!-- Theme configuration -->
@@ -109,7 +109,7 @@
                                 <a
                                   href="{{ '/docs/CV/KimTaveras_CV.pdf' | relative_url }}?v={{ site.github.build_revision }}"
                                   target="_blank" rel="noopener noreferrer"
-                                  class="inline-flex items-center justify-center px-4 py-2 …">
+                                  class="inline-flex items-center justify-center px-4 py-2 rounded-md text-white bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 shadow-sm">
                                   View CV
                                 </a>
                                 <a id="email-link" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
@@ -299,6 +299,7 @@
     </script>
 </body>
 </html>
+
 
 
 
