--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
                             <div class="mt-6 flex flex-col space-y-3">
                                 <a
                                   href="{{ '/docs/CV/KimTaveras_CV.pdf' | relative_url }}?v={{ site.github.build_revision }}"
-                                  target="_blank" rel="noopener noreferrer"
-                                  class="inline-flex items-center justify-center px-4 py-2 rounded-md text-white bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 shadow-sm">
+                                  target="_blank"
+                                  rel="noopener"  <!-- or "noopener noreferrer" -->
+                                  class="inline-flex items-center justify-center px-4 py-2 border border-transparent
+                                         text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700
+                                         dark:bg-blue-500 dark:hover:bg-blue-600 shadow-sm">
                                   View CV
                                 </a>
                                 <a id="email-link" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
@@ -118,13 +121,13 @@
                                     </svg>
                                     Email
                                 </a>
-                                <a href="https://linkedin.com/in/ivankimtaveras" target="_blank" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
+                                <a href="https://linkedin.com/in/ivankimtaveras" target="_blank" rel="noopener noreferrer" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
                                     <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
                                         <path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-9 15H7v-7h3v7zm-1.5-8.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM18 18h-3v-3.5c0-.83-.02-1.9-1.17-1.9s-1.34.92-1.34 1.84V18h-3v-7h2.89v1.26h.04c.38-.71 1.3-1.26 2.6-1.26 2.77 0 3.28 1.82 3.28 4.2V18z"/>
                                     </svg>
                                     LinkedIn
                                 </a>
-                                <a href="https://x.com/IvanKimT" target="_blank" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
+                                <a href="https://x.com/IvanKimT" target="_blank" rel="noopener noreferrer" class="flex items-center text-blue-600 dark:text-blue-400 hover:underline">
                                     <svg class="h-5 w-5 mr-2" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                                         <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                                     </svg>
@@ -299,6 +302,7 @@
     </script>
 </body>
 </html>
+
 
 
 
