--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="sticky top-32">
                             <img
                               class="rounded-lg shadow-lg w-full h-auto object-cover"
-                              src="{{ '/docs/photo/Website_Photo_KimTaveras.JPG' | relative_url }}?v={{ site.github.build_revision }}"
+                              src="{{ '/docs/photo/Website_Photo_KimTaveras.PNG' | relative_url }}?v={{ site.github.build_revision }}"
                               alt="Iván Jomin Kim Taveras"
                               loading="lazy" decoding="async"
                               onerror="this.onerror=null;this.src='https://placehold.co/400x400/e2e8f0/4a5568?text=Image+Not+Found';"
@@ -297,6 +297,7 @@
     </script>
 </body>
 </html>
+
 
 
 
