--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         document.documentElement.classList.remove('dark')
       }
     </script>
-
-    <script>tailwind = { config: { darkMode: 'class' } }</script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script> 
+    <script> tailwind.config = { darkMode: 'class' } </script>
     
     <!-- Icon -->
     <link rel="icon" type="image/png" href="{{ '/docs/icon/initials_icon.png' | relative_url }}">
@@ -297,6 +296,7 @@
     </script>
 </body>
 </html>
+
 
 
 
