--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
                                 <div class="mt-3 flex items-center gap-4">
                                     <a
-                                      href="#"
+                                      href="{{ '/docs/papers/ShiftingSeasons_KimTaveras.pdf' | relative_url }}?v={{ site.github.build_revision }}"
                                       target="_blank" rel="noopener noreferrer"
                                       class="text-blue-600 dark:text-blue-400 hover:underline font-medium">
                                       View Paper (PDF)
@@ -296,6 +296,7 @@
     </script>
 </body>
 </html>
+
 
 
 
