Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
             // --- Bot-safe Email Link ---
             const user = 'ivan.kimtaveras';
-            const domain = 'unibocconi.it';
+            const domain = 'phd.unibocconi.it';
             const emailLink = document.getElementById('email-link');
             if(emailLink) {
                 emailLink.setAttribute('href', `mailto:${user}@${domain}`);
@@ -299,6 +299,7 @@
     </script>
 </body>
 </html>
+
 
 
 
