--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             </article>
                             <article id="FSTS">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
-                                <p class="mt-1 text-gray-600 dark:text-gray-400 italic font-bold">Conditionally accepted at the Journal of the European Economic Association</p>
+                                <p class="mt-1 text-green-600 dark:text-green-400 italic font-bold">Conditionally accepted at the Journal of the European Economic Association</p>
                                 <p class="mt-2 text-gray-700 dark:text-gray-300">
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
                                 </p>
@@ -303,6 +303,7 @@
     </script>
 </body>
 </html>
+
 
 
 
