Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -151,8 +151,11 @@
                         <div class="space-y-8">
                             <article id="RainySeasons">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
-                                <p class="mt-1 text-gray-600 dark:text-gray-400 italic font-bold">Job Market Paper</p>
-                                <div class="mt-3 flex items-center gap-4">
+                                <p class="mt-1 italic font-bold">
+                                  <span class="text-gray-600 dark:text-gray-400">Conditionally accepted at the </span>
+                                  <span class="text-green-600 dark:text-green-400">Journal of the European Economic Association</span>
+                                </p>                                
+                                    <div class="mt-3 flex items-center gap-4">
                                     <a
                                       href="{{ '/docs/papers/ShiftingSeasons_KimTaveras.pdf' | relative_url }}?v={{ site.github.build_revision }}"
                                       target="_blank" rel="noopener noreferrer"
@@ -302,6 +305,7 @@
     </script>
 </body>
 </html>
+
 
 
 
