--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
                                 <p class="mt-1 italic font-bold">
                                   <span class="text-gray-600 dark:text-gray-400">Conditionally accepted at the </span>
-                                  <span class="text-green-600 dark:text-green-400">Journal of the European Economic Association</span>
+                                  <span class="text-teal-600 dark:text-teal-400">Journal of the European Economic Association</span>
                                 </p>  
                                 <p class="mt-2 text-gray-700 dark:text-gray-300">
                                     with <a href="https://alexarmand.org" target="_blank" class="text-blue-600 dark:text-blue-400 hover:underline">Alex Armand</a>
@@ -305,6 +305,7 @@
     </script>
 </body>
 </html>
+
 
 
 
