--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </section>
 
                     <section id="publications">
-                        <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Main Publications</h2>
+                        <h2 class="text-2xl font-bold border-b-2 border-blue-500 pb-2 mb-6 text-gray-900 dark:text-white">Publications</h2>
                         <div class="space-y-8">
                             <article id="FSTS">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
@@ -322,6 +322,7 @@
     </script>
 </body>
 </html>
+
 
 
 
