--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
                         <div class="space-y-8">
                             <article id="RainySeasons">
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Shifting Seasons: Agricultural Adaptation and Resilience in Africa</h3>
-                                <p class="mt-1 text-gray-600 dark:text-gray-400 italic font-bold">Job Market Paper</p>                              
+                                <p class="mt-1 font-bold text-teal-600 dark:text-teal-400">
+                                    Job Market Paper
+                                </p>  
                                     <div class="mt-3 flex items-center gap-4">
                                     <a
                                       href="{{ '/docs/papers/ShiftingSeasons_KimTaveras.pdf' | relative_url }}?v={{ site.github.build_revision }}"
@@ -322,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
