--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                                 <h3 class="text-xl font-semibold text-gray-900 dark:text-white">From Sea to Shore: The Impact of Ocean Acidification on Child Health</h3>
                                 <p class="mt-1">
                                   <a href="https://doi.org/10.1093/jeea/jvaf054"
-                                     class="font-bold text-teal-600 dark:text-teal-400">
+                                   class="mt-1 font-bold text-teal-600 dark:text-teal-400"
+                                   target="_blank"
+                                   rel="noopener noreferrer">
                                     Journal of the European Economic Association (forthcoming)
                                   </a>
                                 </p>
@@ -329,6 +331,7 @@
     </script>
 </body>
 </html>
+
 
 
 
